# smart-projects-ros-pkg

./: README.md
bluetooth_weather/: .cproject  .project  CMakeLists.txt  README.md  package.xml  setup.py
bluetooth_weather/cfg/: bluetooth_weather.cfg
bluetooth_weather/model/: bluetooth_weather.ros_package  bluetooth_weather.ros_package_diagram
bluetooth_weather/src/: bluetooth_weather.py  bluetooth_weather.py~
